--- a/docs/team/calvincxz.adoc
+++ b/docs/team/calvincxz.adoc
@@ -1,4 +1,4 @@
-= John Doe - Project Portfolio
+= Calvin Chen Xingzhu - Project Portfolio
 :site-section: AboutUs
 :imagesDir: ../images
 :stylesDir: ../stylesheets
