--- a/docs/team/divinedx.adoc
+++ b/docs/team/divinedx.adoc
@@ -1,4 +1,4 @@
-= John Doe - Project Portfolio
+= Chia De Xun - Project Portfolio
 :site-section: AboutUs
 :imagesDir: ../images
 :stylesDir: ../stylesheets
