--- a/docs/team/crisgu.adoc
+++ b/docs/team/crisgu.adoc
@@ -1,4 +1,4 @@
-= John Doe - Project Portfolio
+= Gu Chunzhi - Project Portfolio
 :site-section: AboutUs
 :imagesDir: ../images
 :stylesDir: ../stylesheets
