--- a/docs/team/eshwarkp.adoc
+++ b/docs/team/eshwarkp.adoc
@@ -1,4 +1,4 @@
-= John Doe - Project Portfolio
+= Eshwar Kamalapathy - Project Portfolio
 :site-section: AboutUs
 :imagesDir: ../images
 :stylesDir: ../stylesheets
