Update and rename shi_hao.adoc to shihaoyap.adoc
Update and rename shi_hao.adoc to shihaoyap.adoc

--- a/docs/team/shihaoyap.adoc
+++ b/docs/team/shihaoyap.adoc
@@ -1,4 +1,4 @@
-= John Doe - Project Portfolio
+= Yap Shi Hao - Project Portfolio
 :site-section: AboutUs
 :imagesDir: ../images
 :stylesDir: ../stylesheets
