--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -264,6 +264,11 @@ We are using `java.util.logging` package for logging. The `LogsCenter` class is 
 
 Certain properties of the application can be controlled (e.g user prefs file location, logging level) through the configuration file (default: `config.json`).
 
+[[Implementation-Finance]]
+=== Finance
+
+Automaticlly generate workers' salary.
+
 == Documentation
 
 Refer to the guide <<Documentation#, here>>.
