--- a/docs/DeveloperGuide.adoc
+++ b/docs/DeveloperGuide.adoc
@@ -648,25 +648,46 @@ Use case resumes at step 2.
 Use case resumes at step 2.
 
 [discrete]
-=== Use case: Allocate Manpower to Event manually
+=== Use case: Allocate an Employee to an Event
 
 *MSS*
 
 1.  User requests to view the company’s current list of employees and events.
 2.  AddMin+ shows the list of employees and events.
-3.  User states an Employee_ID that is matched to an Event_ID
-4.  Employee allocated to Event.
+3.  User specifies the index of the event, and the index of the employee.
+4.  AddMin+ allocates the Employee to the Event.
 +
 Use case ends.
 
 *Extensions*
 
-* 2.The Employee_ID/Event_ID is invalid.
+* 3a.Input Index given is invalid.
 +
 [none]
-** 2a.Addmin+ shows an error message.
+** 3a1.AddMin+ shows the error message.
 +
-Use case resumes at step 2.
+Use case resumes at step 3.
+
+* 3b.The event has full manpower.
++
+[none]
+** 3b1.AddMin+ shows the error message.
++
+Use case resumes at step 3.
+
+* 3c.The employee was previously allocated to the event.
++
+[none]
+** 3c1.AddMin+ shows the error message.
++
+Use case resumes at step 3.
+
+* 3d.The employee has a conflicting schedule, and is unavailable for the event.
++
+[none]
+** 3d1.AddMin+ shows the error message.
++
+Use case resumes at step 3.
 
 [discrete]
 === Use case: View Schedule on a specific date
@@ -687,25 +708,6 @@ Use case ends.
 +
 [none]
 ** 3a.AddMin+ shows an error message.
-+
-Use case resumes at step 2.
-
-[discrete]
-=== Use case: Fetch Events
-*MSS*
-
-1.  User requests to fetch an Event by specifying an Event_ID
-2.  AddMin+ displays the matching result
-
-+
-Use case ends.
-
-*Extensions*
-
-* 2.The given event ID is invalid or nonexistent.
-+
-[none]
-** 2a.Addmin+ shows an error message.
 +
 Use case resumes at step 2.
 
@@ -768,7 +770,18 @@ These instructions only provide a starting point for testers to work on; testers
 
 === Saving data
 
-. Dealing with missing/corrupted data files
+. Dealing with missing data files
+
+.. Go to the home folder where AddMin+ is located.
+.. Delete every file except the .jar file.
+.. Open the jar file again, a sample set of Employee and Event data should be loaded.
+
+. Dealing with corrupted data files
+
+.. Go to the home folder where AddMin+ is located. Open the data folder which should contain
+employeebook.json and eventbook.json files.
+.. Open one of the json file and corrupt the file.
+.. Open the jar file again, AddMin+ should still run with one of the list data loaded.
 
 .. _{explain how to simulate a missing/corrupted file and the expected behavior}_
 
