--- a/docs/SettingUp.adoc
+++ b/docs/SettingUp.adoc
@@ -1,4 +1,4 @@
-= AddressBook Level 3 - Setting Up
+= AddMin+ - Setting Up
 :site-section: DeveloperGuide
 :toc:
 :toc-title:
@@ -81,4 +81,4 @@ Having both Travis and AppVeyor ensures your App works on both Unix-based platfo
 
 === Getting started with coding
 
-When you are ready to start coding, we recommend that you get some sense of the overall design by reading about <<DeveloperGuide#Design-Architecture, AddressBook's architecture>>.
+When you are ready to start coding, we recommend that you get some sense of the overall design by reading about <<DeveloperGuide#Design-Architecture, AddMin+'s architecture>>.
