--- a/docs/team/calvincxz.adoc
+++ b/docs/team/calvincxz.adoc
@@ -14,8 +14,8 @@ My team of 4 software engineering students and I were tasked with enhancing a ba
 addressbook application for our Software Engineering project. We chose to morph it into a all-in-one administration
 desktop application called AddMin+.
 
-AddMin+ is specially designed to ease the workload of the admin staffs in these companies and allow him/her to
-effectively handle the administrative tasks of the company.
+AddMin+ is specially designed to ease the workload of the admin staffs in event management companies by allowing them to
+effectively handle administrative tasks.
 
 This is what our project looks like:
 
@@ -23,8 +23,12 @@ This is what our project looks like:
 image::AddMin+Ui.png[]
 
 My role was to design and write the code for the association of employees with event, which includes
-event display and the allocation of employee to event. The following sections
-illustrate these features in more detail, as well as the relevant documentation
+everything from front-end display where users can see such an association to the back-end
+storage. One interesting point of this feature was the
+development of an algorithm which internally checks schedule of individual employees and prevents
+schedule clashes.
+
+The following sections illustrate these features in more detail, as well as the relevant documentation
 I have added to the user and developer guides in relation to these features.
 
 <<<
@@ -32,7 +36,7 @@ I have added to the user and developer guides in relation to these features.
 == Summary of contributions
 
 * *Major feature*: enabled the association of employees with events which includes
-*automated/manual allocation of employees to event commands* and a *deallocate command*, as well as the
+*automated/manual allocation of employees to event commands* and a *de-allocate command*, as well as the
 viewing of changes the users made via the *fetch event* command. All related commands have *GUI features* implemented.
 
 ** What it does: This feature allows the user to check for availability of employees and allocate them to an event with
@@ -40,7 +44,9 @@ certain filter requirements. The algorithm ensures that employees cannot be allo
 conflicting time periods.
 
 ** Justification: This feature improves the product significantly because a user can now allocate employees
-to events, which is a key component for events management companies that our app is targeting.
+to events, which is a key component for event management companies that our app is targeting.
+The algorithm used to check for conflicting schedule is also highly beneficial for users as we
+all know how tedious such tasks can be.
 The GUI features further provide convenience for users.
 ** Highlights: This enhancement affects existing commands and commands to be added in future.
 It required an in-depth analysis of design alternatives. The implementation too was challenging as it
